Altered featured property in data.js. Removed x-scroll in html, body. Removed visible class and visible properties in css. Added Featured Rooms component - but can't seem to acces only the photos I want withput re-structuring data.js - have to be coded manually :(. Fixed navbar,js. Altered layout in home.js.

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,13 @@
   --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
+ html,
+ body {
+   /*used to prevent horizontal scrolling for images in work section & design section */
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   padding-top: 50px;
   /* background: rgb(193, 154, 91); */
@@ -84,23 +91,82 @@ h2 {
   text-align: center !important;
 }
 
-.container, .container-center {
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  /* overflow-x: hidden; */
+}
+
+.container-center {
   padding: 50px;
   max-width: 1000px;
   margin: 0 auto;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  text-align: center;
 }
+
+/* .container-center.visible {
+  overflow-x: visible;
+} */
 
 .no-padding {
   padding: 0 !important;
 }
 
-.container-center {
-  text-align: center;
+.p-50 {
+  padding: 50px;
 }
 
-.container-center.visible {
-  overflow-x: visible;
+.pt-50 {
+  padding-top: 50px;
+}
+
+.pt-100 {
+  padding-top: 100px;
+}
+
+.pb-50 {
+  padding-bottom: 50px;
+}
+
+.pb-100 {
+  padding-bottom: 100px;
+}
+
+.py-50 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.py-100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
+.my-50 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.my-100 {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 ::-webkit-scrollbar {
@@ -495,7 +561,7 @@ h2 {
 
 .title-text-wrapper {
   width: 100%;
-  max-width: 900px;
+  /* max-width: 900px; */
   padding: 3rem;
   display: flex;
   flex-direction: column;
@@ -567,10 +633,7 @@ h2 {
 
 .right-section {
   width: 45%;
-  /* min-width: 450px; */
   display: inline;
-  /* overflow-x: hidden !important; */
-  overflow-x: visible !important;
 }
 
 .main-image {
@@ -798,11 +861,50 @@ background-color: var(--primaryColor);
 /* MQ Services end */
 /* End of Services */
 
+/* Start of FeaturedRooms */
+
+.featuredRooms {
+  height: 100%;
+}
+
+.featured-images-section {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  grid-auto-flow: dense;
+  margin: 0 auto;
+}
+
+.image-style {
+  width: 100%;
+  max-width: 300px;
+  padding: 10px 0;
+  /* max-height: 200px; */
+}
+@media screen and (min-width: 776px) {
+  .featured-images-section {
+    
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .featured-images-section {
+   
+  }
+}
+
+/* MQ Start of FeaturedRooms */
+
+
+/* MQ End of FeaturedRooms */
+/* End of Services */
+
 /* Process start */
 .process {
   height: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 6% 0;
 }
